add proxy to work with scheduler api

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "proxy": "http://localhost:8001"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,6 +18,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
     "build-storybook": "build-storybook -s public"
+    
   },
   "browserslist": {
     "production": [
@@ -47,4 +49,5 @@
       "<rootDir>/.git/"
     ]
   }
+  
 }
