Refactor the code with hooks and effects

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.0",
-    "proxy": "http://localhost:8001"
+    "react-scripts": "3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +17,6 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
     "build-storybook": "build-storybook -s public"
-    
   },
   "browserslist": {
     "production": [
@@ -41,13 +39,14 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
-    "babel-loader": "^8.0.5"
+    "babel-loader": "^8.0.5",
+    "react-test-renderer": "^16.14.0"
   },
   "jest": {
     "watchPathIgnorePatterns": [
       "<rootDir>/node_modules/",
       "<rootDir>/.git/"
     ]
-  }
-  
+  },
+  "proxy": "http://localhost:8001"
 }
