--- a/package.json
+++ b/package.json
@@ -46,9 +46,14 @@
     "react-test-renderer": "^16.14.0"
   },
   "jest": {
+    
     "watchPathIgnorePatterns": [
       "<rootDir>/node_modules/",
       "<rootDir>/.git/"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js"
     ]
   },
   "proxy": "http://localhost:8001/"
